<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="28sp"
        android:textStyle="bold"
        android:textColor="@color/news_primary"
        android:layout_marginBottom="48dp"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:background="@drawable/search_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/search_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/login"
        android:textSize="16sp"
        android:backgroundTint="@color/news_primary"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textSize="14sp"
        android:textColor="@color/news_primary"
        android:padding="12dp"/>

</LinearLayout>
